--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,8 @@
-11/23/2007
+11/24/2007
 Noah Gift
 0.1.3
 
 * Removed cruft.
-
+* Changed License to MIT
+* Added docstring to liten module, along with documentation.
 
