--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -18,3 +18,17 @@ Noah Gift
 
 * Added lib directory, added lmetadata, ldecorate, and lmetaclass. (future API)
 * Added ConfigParser support
+
+12/13/2007
+Noah Gift
+0.1.3-pre-release
+
+* changed --test to exit cleanly after doctests run....sys.exit(0)
+* added message to stdout about invalid size input parameters....sys.exit(0)
+
+01/13/2007
+Noah Gift
+0.1.3-pre-release
+
+* Changed md5 to use hashlib.md5 as this is going to be deprecated in python
+* 2.5
