--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,28 @@
+01/20/2008
+Adding RPM and Debian Packages, plus long description for setup.py
+
+
+01/13/2008
+Noah Gift
+0.1.3-pre-release
+
+* Changed md5 to use hashlib.md5 as this is going to be deprecated in python
+* 2.5
+
+12/13/2007
+Noah Gift
+0.1.3-pre-release
+
+* changed --test to exit cleanly after doctests run....sys.exit(0)
+* added message to stdout about invalid size input parameters....sys.exit(0)
+
+12/02/2007
+Noah Gift
+0.1.3-pre-release
+
+* Added lib directory, added lmetadata, ldecorate, and lmetaclass. (future API)
+* Added ConfigParser support
+
 11/24/2007
 Noah Gift
 0.1.3-pre-release
@@ -12,23 +37,4 @@ Noah Gift
 * Fixed checksum algorithm to buffer what it reads into memory
 
 
-12/02/2007
-Noah Gift
-0.1.3-pre-release
 
-* Added lib directory, added lmetadata, ldecorate, and lmetaclass. (future API)
-* Added ConfigParser support
-
-12/13/2007
-Noah Gift
-0.1.3-pre-release
-
-* changed --test to exit cleanly after doctests run....sys.exit(0)
-* added message to stdout about invalid size input parameters....sys.exit(0)
-
-01/13/2007
-Noah Gift
-0.1.3-pre-release
-
-* Changed md5 to use hashlib.md5 as this is going to be deprecated in python
-* 2.5
