--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+03/07/2008
+Changed sys.exit(0) to be sys.exit(1) for exceptions that exit application
+
 02/18/2008
 Added simple config file support option to allow path and size to be set.
 
