--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,11 @@
+03/29/2008
+Cleanup up cruft.
+Added pattern matching to narrow duplicate search.
+Changed API to be simpler and more OO.
+Added config file support for pattern matching.
+Remove has_key syntax for Python 3000 syntax, patt in key.
+
+
 03/07/2008
 Changed sys.exit(0) to be sys.exit(1) for exceptions that exit application
 
