--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2008-12-25
+techtonik
+Eliminated the bug that Liten needed three duplicates to make match.
+Feature to traverse several dirs supplied in command line.
+
 03/30/2008
 I have not implemented a --dry-run or a --interactive option that depends on --delete
 yet.  I had to remove references to them in the CLI though.  The final fix for this
