link TODO with roadmap

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
+See http://code.google.com/p/liten/wiki/RoadMap
+
+* Document ActionMixin API with example
 * Implement configparse
 * Create decorator functions for:
     * Logger
