use csv module to generate report (fixes issue 8) no notion of original/duplicate in report

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,9 @@
 2009-11-08
 techtonik
 
+* use csv module for generating report
 * report format changed
+  - no notion of original/duplicate
   - tab separated CSV
   - header repeated only once at file start
   - duplicate groups are separated by blank line
