--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,14 @@
-2009-11-08
-techtonik
+2010-03-14 techtonik
+2.0-dev
+
+* docs can be read with standard python help() function
+* API changes
+  - FileAttributes renamed to FileUtils
+  - FileAttributes::sizeType() renamed to Liten::convertSize(string)
+
+
+2009-11-08 techtonik
+2.0-dev
 
 * size is now case-insensitive
 * use csv module for generating report
@@ -8,9 +17,8 @@ techtonik
   - tab separated CSV
   - header repeated only once at file start
   - duplicate groups are separated by blank line
-* docs can be read with standard python help() function
 
-* API changed
+* API changes
   - 'action' callback parameter is removed from Liten constructor. Use 'handler'
     parameter with ActionsMixin subclass to alter remove() action logic
   - ActionsMixin not a parent, but a parameter to Liten class constructor.
@@ -19,6 +27,7 @@ techtonik
     handler for file deletion
 
   (P.S. ActionMixin is now a Strategy pattern for handling duplicates)
+
 
 2008-12-25
 techtonik
